preventing cards from breaking on smaller devices

--- a/assets/css/_card.scss
+++ b/assets/css/_card.scss
@@ -8,6 +8,10 @@
     box-shadow: 0 6px 8px 0 rgba(0,0,0,0.11);
     padding: 20px;
 
+    .card-body {
+        padding-top: 0;
+    }
+
     h3 {
         font-family: Lato;	
         font-size: 18px;	
@@ -32,19 +36,21 @@
     }
 
     .topics {
+        max-height: 79px;
+        overflow: hidden;
         text-align: center;
         a {
-        text-transform: capitalize;
-        background-color: #DFE9F3;
-        color: #1A2539;
-        font-size: 10px;
-        height: 19px;
-        border-radius: 3px;
-        display: inline-block;
-        padding: 5px;
-        line-height: 10px;
-        margin-bottom: 3px;
-        margin-right: 3px;
+            text-transform: capitalize;
+            background-color: #DFE9F3;
+            color: #1A2539;
+            font-size: 10px;
+            height: 19px;
+            border-radius: 3px;
+            display: inline-block;
+            padding: 5px;
+            line-height: 10px;
+            margin-bottom: 3px;
+            margin-right: 3px;
         }
     }
 
